--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/Mindo21/paas#readme",
   "dependencies": {
+    "@google-cloud/datastore": "^6.3.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
