working paas with react front-end

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "build-start": "cd static/ && npm run build && cd .. && npm start"
   },
   "repository": {
     "type": "git",
