--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "build": "cd static/ && npm run build && cd ..",
     "build-start": "cd static/ && npm run build && cd .. && npm start",
     "install-build": "cd static/ && npm i && npm run build && cd .. && npm i",
     "install-build-start": "npm run install-build && npm start"
